# Tetris-Fight

./: README.md  colors.py  main.py  pyproject.toml  shapes.py
tetris-fight/: configs.py  game.py  test.py
